// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`kosko generate --env dev : should generate a kitchen sink dev manifest 1`] = `
"---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/creatorId: github
    field.cattle.io/projectId: ''
    git/branch: e2e-branch
    git/remote: socialgouv/kitchen-sink
  labels:
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: e2e-branch
  name: e2e-branch-kitchen-sink
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: hasura
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: e2e-branch
  name: hasura
  namespace: e2e-branch-kitchen-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        app: hasura
        app.github.com/run: '1234'
        app.github.com/job: '5678'
        app.github.com/repo: socialgouv/kitchen-sink
        app.github.com/sha: '8843083'
        app.github.com/ref: e2e-branch
    spec:
      containers:
        - image: >-
            ghcr.io/socialgouv/kitchen-sink/hasura:8843083edb7f873cad1d1420731a60773594ffae
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: hasura
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 64Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          envFrom:
            - secretRef:
                name: azure-pg-user-8843083
      imagePullSecrets:
        - name: regcred
      initContainers:
        - env:
            - name: WAIT_FOR_RETRIES
              value: '24'
          envFrom:
            - secretRef:
                name: azure-pg-user-8843083
          image: ghcr.io/socialgouv/docker/wait-for-postgres:6.0.1
          imagePullPolicy: Always
          name: wait-for-postgres
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasura
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: e2e-branch
  name: hasura
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  namespace: e2e-branch-kitchen-sink
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: hasura
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: e2e-branch
    component: next
  name: www
  namespace: e2e-branch-kitchen-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        app: www
        app.github.com/run: '1234'
        app.github.com/job: '5678'
        app.github.com/repo: socialgouv/kitchen-sink
        app.github.com/sha: '8843083'
        app.github.com/ref: e2e-branch
        component: next
    spec:
      containers:
        - image: >-
            ghcr.io/socialgouv/kitchen-sink/www:8843083edb7f873cad1d1420731a60773594ffae
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: www
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 1m
              memory: 64Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          envFrom:
            - secretRef:
                name: azure-pg-user-8843083
      imagePullSecrets:
        - name: some-secret
      initContainers:
        - env:
            - name: WAIT_FOR_RETRIES
              value: '24'
          envFrom:
            - secretRef:
                name: azure-pg-user-8843083
          image: ghcr.io/socialgouv/docker/wait-for-postgres:6.0.1
          imagePullPolicy: Always
          name: wait-for-postgres
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: e2e-branch
  name: www
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  namespace: e2e-branch-kitchen-sink
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: www
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: e2e-branch
  name: www
  namespace: e2e-branch-kitchen-sink
spec:
  rules:
    - host: e2e-branch-kitchen-sink.dev2.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              serviceName: www
              servicePort: 80
            path: /
  tls:
    - hosts:
        - e2e-branch-kitchen-sink.dev2.fabrique.social.gouv.fr
      secretName: wildcard-crt
---
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: www
  namespace: e2e-branch-kitchen-sink
spec:
  maxReplicas: 10
  metrics:
    - resource:
        name: cpu
        target:
          averageUtilization: 100
          type: Utilization
      type: Resource
    - resource:
        name: memory
        target:
          averageUtilization: 100
          type: Utilization
      type: Resource
  minReplicas: 1
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: www"
`;

exports[`kosko generate --env preprod : should generate a kitchen sink preprod manifest 1`] = `
"---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/creatorId: github
    field.cattle.io/projectId: ''
    git/branch: v1.2.3
    git/remote: socialgouv/kitchen-sink
  labels:
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v1.2.3
  name: preprod-kitchen-sink
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: hasura
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v1.2.3
  name: hasura
  namespace: preprod-kitchen-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        app: hasura
        app.github.com/run: '1234'
        app.github.com/job: '5678'
        app.github.com/repo: socialgouv/kitchen-sink
        app.github.com/sha: '8843083'
        app.github.com/ref: v1.2.3
    spec:
      containers:
        - image: ghcr.io/socialgouv/kitchen-sink/hasura:1.2.3
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: hasura
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 64Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          envFrom:
            - secretRef:
                name: azure-pg-user
      imagePullSecrets:
        - name: regcred
      initContainers:
        - env:
            - name: WAIT_FOR_RETRIES
              value: '24'
          envFrom:
            - secretRef:
                name: azure-pg-user
          image: ghcr.io/socialgouv/docker/wait-for-postgres:6.0.1
          imagePullPolicy: Always
          name: wait-for-postgres
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasura
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v1.2.3
  name: hasura
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  namespace: preprod-kitchen-sink
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: hasura
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v1.2.3
    component: next
  name: www
  namespace: preprod-kitchen-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        app: www
        app.github.com/run: '1234'
        app.github.com/job: '5678'
        app.github.com/repo: socialgouv/kitchen-sink
        app.github.com/sha: '8843083'
        app.github.com/ref: v1.2.3
        component: next
    spec:
      containers:
        - image: ghcr.io/socialgouv/kitchen-sink/www:1.2.3
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: www
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 1m
              memory: 64Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          envFrom:
            - secretRef:
                name: azure-pg-user
      imagePullSecrets:
        - name: some-secret
      initContainers:
        - env:
            - name: WAIT_FOR_RETRIES
              value: '24'
          envFrom:
            - secretRef:
                name: azure-pg-user
          image: ghcr.io/socialgouv/docker/wait-for-postgres:6.0.1
          imagePullPolicy: Always
          name: wait-for-postgres
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v1.2.3
  name: www
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  namespace: preprod-kitchen-sink
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: www
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v1.2.3
  name: www
  namespace: preprod-kitchen-sink
spec:
  rules:
    - host: v1.2.3-kitchen-sink.dev2.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              serviceName: www
              servicePort: 80
            path: /
  tls:
    - hosts:
        - v1.2.3-kitchen-sink.dev2.fabrique.social.gouv.fr
      secretName: wildcard-crt
---
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: www
  namespace: preprod-kitchen-sink
spec:
  maxReplicas: 10
  metrics:
    - resource:
        name: cpu
        target:
          averageUtilization: 100
          type: Utilization
      type: Resource
    - resource:
        name: memory
        target:
          averageUtilization: 100
          type: Utilization
      type: Resource
  minReplicas: 1
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: www"
`;

exports[`kosko generate --env prod : should generate a kitchen sink prod manifest 1`] = `
"---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    field.cattle.io/creatorId: github
    field.cattle.io/projectId: ''
    git/branch: v42.0.0
    git/remote: socialgouv/kitchen-sink
  labels:
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v42.0.0
  name: kitchen-sink
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: hasura
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v42.0.0
  name: hasura
  namespace: kitchen-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hasura
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        app: hasura
        app.github.com/run: '1234'
        app.github.com/job: '5678'
        app.github.com/repo: socialgouv/kitchen-sink
        app.github.com/sha: '8843083'
        app.github.com/ref: v42.0.0
    spec:
      containers:
        - image: ghcr.io/socialgouv/kitchen-sink/hasura:42.0.0
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: hasura
          ports:
            - containerPort: 80
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 64Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          envFrom:
            - secretRef:
                name: azure-pg-user
      imagePullSecrets:
        - name: regcred
      initContainers:
        - env:
            - name: WAIT_FOR_RETRIES
              value: '24'
          envFrom:
            - secretRef:
                name: azure-pg-user
          image: ghcr.io/socialgouv/docker/wait-for-postgres:6.0.1
          imagePullPolicy: Always
          name: wait-for-postgres
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hasura
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v42.0.0
  name: hasura
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  namespace: kitchen-sink
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: hasura
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v42.0.0
    component: next
  name: www
  namespace: kitchen-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: www
  template:
    metadata:
      annotations:
        kapp.k14s.io/disable-default-ownership-label-rules: ''
        kapp.k14s.io/disable-default-label-scoping-rules: ''
      labels:
        app: www
        app.github.com/run: '1234'
        app.github.com/job: '5678'
        app.github.com/repo: socialgouv/kitchen-sink
        app.github.com/sha: '8843083'
        app.github.com/ref: v42.0.0
        component: next
    spec:
      containers:
        - image: ghcr.io/socialgouv/kitchen-sink/www:42.0.0
          livenessProbe:
            failureThreshold: 6
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 5
          name: www
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            failureThreshold: 15
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 0
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 50m
              memory: 128Mi
            requests:
              cpu: 1m
              memory: 64Mi
          startupProbe:
            failureThreshold: 12
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 5
          envFrom:
            - secretRef:
                name: azure-pg-user
      imagePullSecrets:
        - name: some-secret
      initContainers:
        - env:
            - name: WAIT_FOR_RETRIES
              value: '24'
          envFrom:
            - secretRef:
                name: azure-pg-user
          image: ghcr.io/socialgouv/docker/wait-for-postgres:6.0.1
          imagePullPolicy: Always
          name: wait-for-postgres
          resources:
            limits:
              cpu: 20m
              memory: 32Mi
            requests:
              cpu: 5m
              memory: 16Mi
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/permanent-redirect: https://www.website.fr$request_uri
  labels:
    app: www-redirects
  name: www-redirects
spec:
  rules:
    - host: website.fr
    - host: old-website.com
  tls:
    - hosts:
        - website.fr
        - old-website.com
      secretName: www-redirects
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v42.0.0
  name: www
  annotations:
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  namespace: kitchen-sink
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8080
  selector:
    app: www
  type: ClusterIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kapp.k14s.io/disable-default-ownership-label-rules: ''
    kapp.k14s.io/disable-default-label-scoping-rules: ''
  labels:
    app: www
    app.github.com/run: '1234'
    app.github.com/job: '5678'
    app.github.com/repo: socialgouv/kitchen-sink
    app.github.com/sha: '8843083'
    app.github.com/ref: v42.0.0
  name: www
  namespace: kitchen-sink
spec:
  rules:
    - host: kitchen-sink.fabrique.social.gouv.fr
      http:
        paths:
          - backend:
              serviceName: www
              servicePort: 80
            path: /
  tls:
    - hosts:
        - kitchen-sink.fabrique.social.gouv.fr
      secretName: wildcard-crt
---
apiVersion: autoscaling/v2beta2
kind: HorizontalPodAutoscaler
metadata:
  name: www
  namespace: kitchen-sink
spec:
  maxReplicas: 10
  metrics:
    - resource:
        name: cpu
        target:
          averageUtilization: 100
          type: Utilization
      type: Resource
    - resource:
        name: memory
        target:
          averageUtilization: 100
          type: Utilization
      type: Resource
  minReplicas: 1
  scaleTargetRef:
    apiVersion: apps/v1
    kind: Deployment
    name: www
---
apiVersion: v1
kind: Namespace
metadata:
  annotations:
    app.gitlab.com/app: socialgouv-sample-kosko
  labels:
    application: some-application
    owner: sample-kosko
    team: sample-kosko
    cert: wildcard
  name: kitchen-sink-imported-namespace"
`;
